examples/error/wrong_number_of_arguments.rx
function string id(string str) {
  return str;
}

function void main() {
  id();
}